# ossim_sierra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  syscall.tbl
include/: common.hpp  configuration.hpp  cpu.hpp  internal_memory.hpp  kernel_config.hpp  loader.hpp  logger.hpp  memory.hpp  scheduler.hpp  syscall.hpp  timer.hpp
input/: os_0_mlq_paging  os_1_mlq_paging  os_1_mlq_paging_small_2K  os_1_mlq_paging_small_4K  os_1_singleCPU_mlq  os_syscall  os_syscall_list  sched  sched_0  sched_1
output/: os_1_mlq_paging_small_2K.output  os_1_singleCPU_mlq.output
src/: configuration.cpp  cpu.cpp  internal_memory.cpp  loader.cpp  logger.cpp  memory.cpp  process.cpp  scheduler.cpp  syscall.cpp  timer.cpp
src/syscall/: kill_process_tree.cpp  list_syscalls.cpp  memory_mapping.cpp
